<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
 
        <ListPreference
            android:key="prefComparacion"
            android:entries="@array/estrategiasComparacion"
            android:summary="@string/pref_estrat_comparacion_summary"
            android:entryValues="@array/estrategiasComparacionValues"
            android:title="@string/pref_comparacion" >
        </ListPreference>
 
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />

    </PreferenceCategory>
 
</PreferenceScreen>